--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel</title>
+    <title>TravelAgency</title>
+    <link rel="stylesheet" href="./travel_recommendation.css">
 </head>
 <body>
     <nav>
