--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div class="logo"><i class="fas fa-globe-americas"></i></div>
                 <h4>TravelAgency</h4>
             </div>
-            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./contact.html">Contact</a></li>
             <div class="search-container">
@@ -28,5 +28,6 @@
         <p>We encourage you to explore more territories, see diverse cultures and landscapes, and create unforgettable memories that will last a lifetime. Your next adventure awaits!</p>
         <a href="#" class="cta-button">Start Your Journey</a>
     </div>
+    <script src="./travel_recommendation.js"></script>
 </body>
 </html>
