--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
                 <div class="logo"><i class="fas fa-globe-americas"></i></div>
                 <h4>TravelAgency</h4>
             </div>
-            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html" class="active">About Us</a></li>
             <li><a href="./contact.html">Contact Us</a></li>
         </ul>
