--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TravelAgency</title>
     <link rel="stylesheet" href="./travel_recommendation.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <nav>
@@ -31,11 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="main-content">
-        <h1>EXPLORE DREAM DESTINATION</h1>
-        <p>We encourage you to explore more territories, see diverse cultures and landscapes, and create unforgettable memories that will last a lifetime. Your next adventure awaits!</p>
-        <a href="#" class="cta-button">Start Your Journey</a>
-    </div>
+    
     <script src="./travel_recommendation.js"></script>
 </body>
 </html>
